fix horizontal scroll for CodeElement

--- a/src/alfred/static/css/base_web_layout.css
+++ b/src/alfred/static/css/base_web_layout.css
@@ -57,7 +57,7 @@
 }
 
 #pre {
-	overflow: scroll;
+	overflow-x: scroll;
 	width:720px;
 }
 
